# FinanceTrackerMongoDBAPI

./: .gitignore  README.md  main.py  pyproject.toml
Tracker/Routes/: Pydantic_Models.py  __init__.py  category_app.py  transaction_app.py
Tracker/database/: __init__.py  db.py
