[project]
name = "financetrackerapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ALokYadav05",email = "alokak148@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
